Signup link brought up to date

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 <p align="left" class="style8">You can also set up custom data feeds, with user-defined min and max values, tags, description and units. <br />
 </p>
 <p align="left" class="style8">Your data can then be used in a suite of visualizing, conversion and mapping applications available at: <a href="http://apps.pachube.com/">http://apps.pachube.com/</a>.<br/>
-<p align="left"><span class="style8">To use the application you will need a Pachube account. Sign up here: <a href="http://www.pachube.com/signup">http://www.pachube.com/signup</a>.<br/>
+<p align="left"><span class="style8">To use the application you will need a Pachube account. Sign up here: <a href="https://pachube.com/signup">https://pachube.com/signup</a>.<br/>
 </span></p>
 </body>
 </html>
