--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-<p class="style1"><img src="logo.png" width="280" height="97" /></p>
-<p align="left" class="style1"><span class="style2"><span class="style4"><span class="style5"><span class="style7"><strong>Data Logger </strong>enables you to store and graph any data of your choosing along with a timestamp and geolocation. The application uses <a href="http://www.pachube.com">Pachube.com</a>, a realtime data brokerage for sensor, energy and environment data from objects, devices and buildings around the world. Pachube provides a suite of applications for visualizing, mapping and making sense of the data you have stored.<br/>
+<p class="style1"><img src="logoblack.png" width="280" height="97" /></p>
+<p align="left" class="style1"><span class="style2"><span class="style4"><span class="style5"><span class="style7"><strong>Data Logger </strong>enables you to store and graph any data of your choosing along with a timestamp and geolocation. The application uses <a href="https://pachube.com">Pachube.com</a>, a realtime data brokerage for sensor, energy and environment data from objects, devices and buildings around the world. Pachube provides a suite of applications for visualizing, mapping and making sense of the data you have stored.<br/>
 </span></span></span></span></p>
 <p align="left" class="style8">You might use <strong>Data Logger</strong> to store electricity meter readings, to create maps of pollution or temperature sensor readings around your neighbourhood, or animal sightings around the city. </p>
 <p align="left" class="style8">You can also set up custom data feeds, with user-defined min and max values, tags, description and units. <br />
